add upload from csv button and reset tables to get to the default. bug fix

--- a/roomportallib/src/main/assets/web/index.html
+++ b/roomportallib/src/main/assets/web/index.html
@@ -57,7 +57,16 @@
 
 <div id="columnCheckboxes"></div>
 
-<button id="loadBtn">Load Selected Columns</button>
+<div>
+    <button id="loadFromCsvBtn">Load From CSV</button>
+    <input type="file" id="csvFileInput" style="display:none" accept=".csv" />
+</div>
+<div>
+    <button id="loadBtn">Load Selected Columns</button>
+</div>
+<div>
+    <button id="resetViewBtn">Reset  Tables</button>
+</div>
 
 <div id="addFormContainer" style="margin-top: 24px;"></div>
 <button id="addBtn">Add Row</button>
